fixed background and icon alignment, edited text

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
   margin: 0px;
-  background-image: url('back.png');
   background-repeat: repeat;
   font-family: "Courier New", Courier, monospace;
+  background-image: radial-gradient(rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0.4)), url('back.png');
+  background-attachment: fixed;
 }
 
 .wrapper {
   display: grid;
   grid-template-rows: auto 50px;
   height: 100vh;
-  background-image: radial-gradient(rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0.4));
 }
 
 .panel {
@@ -33,6 +33,7 @@ body {
 .footer a {
   color: #777;
   text-decoration: none;
+  font-style: italic;
 }
 
 .footer a:hover {
@@ -40,7 +41,18 @@ body {
 }
 
 .content {
-  grid-column: 1 / 6;
+  text-align: center;
+  padding: 0.6em;
+}
+
+.content a {
+  color: #777;
+  text-decoration: none;
+  font-style: italic;
+}
+
+.content a:hover {
+  color: #000;
 }
 
 .content h1 {
@@ -52,7 +64,16 @@ body {
   font-size: 1em;
 }
 
+.social-container {
+  text-align: center;
+  display: grid;
+  justify-content: space-around;
+  padding: 0.6em;
+}
+
 .social {
+  grid-row: 1;
+  grid-column: auto;
   font-size: 1.5em;
 }
 
@@ -65,20 +86,14 @@ body {
   color: #777;
 }
 
-.grid-item {
-  padding: 0.6em;
-  text-align: center;
-}
-
 .avatar {
-  grid-column: 1 / 6;
   align-self: center;
   font-size: 30px;
   text-align: center;
 }
 
 img {
-  max-width: 50%;
+  max-width: 65%;
   height: auto;
   border-radius: 50%;
 }
@@ -110,6 +125,10 @@ img {
   }
   .content {
     grid-row: 4 / 6;
+  }
+  .social-container {
+    grid-row: 1 / 6;
+    align-content: space-around;
   }
   .social {
     grid-row: auto;
